# python-simple-email-sender

./: README.md  env.template  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml
usage_example/: send_email.py
