[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-simple-email-sender"
version = "1.0.8"
description = "python-simple-email-sender"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Avi Zaguri" },]
keywords = ["development", "email", "smtp", "sender", "simple"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "custom-python-logger>=2.0.10",
    "pre-commit>=4.5.0",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[project.urls]
Homepage = "https://github.com/aviz92/python-simple-email-sender"
Repository = "https://github.com/aviz92/python-simple-email-sender"
Issues = "https://github.com/aviz92/python-simple-email-sender/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_simple_email_sender*"]
namespaces = false
